--- a/main.html
+++ b/main.html
@@ -37,7 +37,7 @@
   </head>
   <body>
     <form>
-      <h2>Registration Form</h2>
+      <h2>Edited Registration Form</h2>
       <label for="name">Name</label>
       <input type="text" id="name" name="name" placeholder="Enter your name" required>
       <label for="email">Email</label>
